--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  min-height: 100vh;
+  width: 100%;
 
-.App-link {
-  color: #61dafb;
-}
+  &__header {
+    background-color: greenyellow;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  &__main {
+    align-items: center;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  &__footer {
+    background-color: aliceblue;
   }
+
 }
