--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,3 +1,33 @@
+@import 'src/styles/variables';
+
 .login {
-  background-color: red;
+  border-radius: $step;
+  border: 1px solid $color-palette-4;
+
+  &__form {
+    min-width: 300px;
+    padding: 2*$step;
+
+    &__inputs {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+
+      & > * {
+        margin-bottom: 2*$step;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    &__actions {
+      display: flex;
+      justify-content: center;
+      margin-top: 2*$step;
+    }
+  }
 }
