--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@
 $step: 8px;
 
 // Colors
+$color-white: #ffffff;
+
 $color-palette-1: #5585b5;
 $color-palette-2: #53a8b6;
 $color-palette-3: #79c2d0;
