--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/variables';
+
 .app {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,8 @@
   width: 100%;
 
   &__header {
-    background-color: greenyellow;
+    background-color: $color-palette-4;
+    padding: 2*$step;
   }
 
   &__main {
@@ -16,7 +19,7 @@
   }
 
   &__footer {
-    background-color: aliceblue;
+    background-color: $color-palette-4;
+    padding: 2*$step;
   }
-
 }
