--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,7 +1,8 @@
 @import 'src/styles/variables';
 
 .dashboard {
-  min-width: 500px;
+  max-width: calc (100vw - #{2*$step});
+  width: 500px;
 
   &__filters-container {
     margin-bottom: 2*$step;
