Added Delete integration

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -8,4 +8,10 @@
     margin-bottom: 2*$step;
     width: 100%;
   }
+
+  &__data-container {
+    &__editor {
+      margin-top: 2*$step;
+    }
+  }
 }
