--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,10 @@
+// Breakpoints
+$breakpoint-xs: 0px;
+$breakpoint-sm: 360px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 1024px;
+$breakpoint-xl: 1536px;
+
 // Sizes
 $step: 8px;
 
